--- a/index.Rmd
+++ b/index.Rmd
@@ -79,6 +79,7 @@ You'll notice that this course changes "feels" several different times: the firs
 
 **Note**: all dates and assignments subject to change.
 
+
 ## Evaluation {-}
 
 There will be no quota of A's, B's, etc. You may take this class according to any grading structure you prefer (letter grades, pass/fail, etc.) - please feel free to reach out early so we can discuss the best plan for you. 
@@ -111,6 +112,13 @@ It is my intent that students from all backgrounds and perspectives be well serv
 
 Learning about diverse perspectives and identities is an ongoing process. I am always looking to learn more about power and privilege and the harmful effects of racism, sexism, homophobia, classism, and other forms of discrimination and oppression. Your suggestions are encouraged and appreciated. Please let me know ways to improve the effectiveness of the course for you personally, or for other students or student groups. If something was said or done in class (by anyone, including me) that made you feel uncomfortable, please talk to me about it. You may also reach out to the Provost or Associate Deans for further information or discussion.
 
+## Late Work {-}
+
+Try your best to turn in work when it is due. That said - the world is pretty crazy right now. If you're going to need some extra time, please just let me know as far in advance as possible and we'll find a way to work things out. 
+
+## COVID-19 & Remote Instruction {-}
+
+The goal for this term is to be **in-person, together** as much as possible. With that said - it's still a pandemic, so who knows what might happen. If we're going to be switching to remote instruction at any point I will make sure to post in Google Classroom as well as directly e-mail all of you as far ahead of time as I can. If we need to be remote, we'll be using Zoom. 
 
 ## Textbook {-}
 
