--- a/02_02_TheBasicsPart2.Rmd
+++ b/02_02_TheBasicsPart2.Rmd
@@ -1,6 +1,6 @@
 # R Basics: Data Sets
 
-## Goal for Today {-} 
+## Goals for Today {-} 
 
 * Practice loading a variety of different data sets into R 
 * Learning about data frames, tibbles, and the `tidyverse` packages
