--- a/packages.bib
+++ b/packages.bib
@@ -3,7 +3,7 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2020},
+  year = {2021},
   url = {https://www.R-project.org/},
 }
 
@@ -18,16 +18,16 @@
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
-  year = {2021},
-  note = {R package version 1.0.5},
+  year = {2020},
+  note = {R package version 1.0.1},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
 @Manual{R-forcats,
   title = {forcats: Tools for Working with Categorical Variables (Factors)},
   author = {Hadley Wickham},
-  year = {2021},
-  note = {R package version 0.5.1},
+  year = {2020},
+  note = {R package version 0.5.0},
   url = {https://CRAN.R-project.org/package=forcats},
 }
 
@@ -43,7 +43,7 @@
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2021},
-  note = {R package version 1.33},
+  note = {R package version 1.31},
   url = {https://yihui.org/knitr/},
 }
 
@@ -57,9 +57,9 @@
 
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
-  author = {Hadley Wickham and Jim Hester},
-  year = {2020},
-  note = {R package version 1.4.0},
+  author = {Hadley Wickham and Jim Hester and Romain Francois},
+  year = {2018},
+  note = {R package version 1.3.1},
   url = {https://CRAN.R-project.org/package=readr},
 }
 
@@ -82,24 +82,24 @@
 @Manual{R-tibble,
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
-  year = {2021},
-  note = {R package version 3.1.1},
+  year = {2020},
+  note = {R package version 3.0.3},
   url = {https://CRAN.R-project.org/package=tibble},
 }
 
 @Manual{R-tidyr,
   title = {tidyr: Tidy Messy Data},
-  author = {Hadley Wickham},
-  year = {2021},
-  note = {R package version 1.1.3},
+  author = {Hadley Wickham and Lionel Henry},
+  year = {2020},
+  note = {R package version 1.1.1},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
 
 @Manual{R-tidyverse,
   title = {tidyverse: Easily Install and Load the Tidyverse},
   author = {Hadley Wickham},
-  year = {2021},
-  note = {R package version 1.3.1},
+  year = {2019},
+  note = {R package version 1.3.0},
   url = {https://CRAN.R-project.org/package=tidyverse},
 }
 
