--- a/02_02_TheBasicsPart2.Rmd
+++ b/02_02_TheBasicsPart2.Rmd
@@ -18,4 +18,4 @@
 
 ## Important Links and Files {-}
 
-Our working file from class today is available **[here](https://github.com/kylescotshank/applied_data_science/blob/master/Week2_Class2_InClassExamples.R)**
+The file we worked on in class is available [here](https://github.com/kylescotshank/applied_data_science/blob/master/Week2_Class2_InClassExamples.R)
