--- a/03_02_TidyingDataPart2.Rmd
+++ b/03_02_TidyingDataPart2.Rmd
@@ -17,4 +17,4 @@ None!
 
 ## Important Links and Files {-}
 
-* The file we worked on in class is available [here]()
+* The file we worked on in class is available [here](https://github.com/kylescotshank/applied_data_science/blob/master/Week3_Class2_InClassExamples.R)
