--- a/packages.bib
+++ b/packages.bib
@@ -55,6 +55,14 @@
   url = {https://yihui.org/knitr/},
 }
 
+@Manual{R-nycflights13,
+  title = {nycflights13: Flights that Departed NYC in 2013},
+  author = {Hadley Wickham},
+  year = {2021},
+  note = {R package version 1.0.2},
+  url = {https://github.com/hadley/nycflights13},
+}
+
 @Manual{R-purrr,
   title = {purrr: Functional Programming Tools},
   author = {Lionel Henry and Hadley Wickham},
