--- a/04_01_Statistics_SummaryStatistics.Rmd
+++ b/04_01_Statistics_SummaryStatistics.Rmd
@@ -3,6 +3,7 @@
 ## Goals for Today {-} 
 
 * Today we're going to be talking all about central tendency and dispersion! 
+  * Note: we're going to take our time over these next two weeks as I know that not everyone will feel as comfortable as we enter into the "math" portion of the course. I'll provide as many links to supplemental materials and videos as possible to the "optional" reading area - so make sure to check those out! 
 
 ## Readings for Today {-} 
 
