--- a/04_01_Statistics_SummaryStatistics.Rmd
+++ b/04_01_Statistics_SummaryStatistics.Rmd
@@ -23,4 +23,4 @@
 
 ## Important Links and Files {-}
 
-* The file we worked on in class is available [here]()
+* The file we worked on in class is available [here](https://github.com/kylescotshank/applied_data_science/blob/master/Week4_Class1_InClassExamples.R)
