--- a/packages.bib
+++ b/packages.bib
@@ -3,7 +3,7 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2020},
+  year = {2021},
   url = {https://www.R-project.org/},
 }
 
@@ -15,12 +15,60 @@
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 
+@Manual{R-dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  year = {2020},
+  note = {R package version 1.0.1},
+  url = {https://CRAN.R-project.org/package=dplyr},
+}
+
+@Manual{R-forcats,
+  title = {forcats: Tools for Working with Categorical Variables (Factors)},
+  author = {Hadley Wickham},
+  year = {2020},
+  note = {R package version 0.5.0},
+  url = {https://CRAN.R-project.org/package=forcats},
+}
+
+@Manual{R-ggplot2,
+  title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
+  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
+  year = {2020},
+  note = {R package version 3.3.3},
+  url = {https://CRAN.R-project.org/package=ggplot2},
+}
+
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2021},
-  note = {R package version 1.33},
+  note = {R package version 1.31},
   url = {https://yihui.org/knitr/},
+}
+
+@Manual{R-PerformanceAnalytics,
+  title = {PerformanceAnalytics: Econometric Tools for Performance and Risk Analysis},
+  author = {Brian G. Peterson and Peter Carl},
+  year = {2020},
+  note = {R package version 2.0.4},
+  url = {https://github.com/braverock/PerformanceAnalytics},
+}
+
+@Manual{R-purrr,
+  title = {purrr: Functional Programming Tools},
+  author = {Lionel Henry and Hadley Wickham},
+  year = {2020},
+  note = {R package version 0.3.4},
+  url = {https://CRAN.R-project.org/package=purrr},
+}
+
+@Manual{R-readr,
+  title = {readr: Read Rectangular Text Data},
+  author = {Hadley Wickham and Jim Hester and Romain Francois},
+  year = {2018},
+  note = {R package version 1.3.1},
+  url = {https://CRAN.R-project.org/package=readr},
 }
 
 @Manual{R-rmarkdown,
@@ -31,6 +79,55 @@
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
+@Manual{R-stringr,
+  title = {stringr: Simple, Consistent Wrappers for Common String Operations},
+  author = {Hadley Wickham},
+  year = {2019},
+  note = {R package version 1.4.0},
+  url = {https://CRAN.R-project.org/package=stringr},
+}
+
+@Manual{R-tibble,
+  title = {tibble: Simple Data Frames},
+  author = {Kirill Müller and Hadley Wickham},
+  year = {2020},
+  note = {R package version 3.0.3},
+  url = {https://CRAN.R-project.org/package=tibble},
+}
+
+@Manual{R-tidyr,
+  title = {tidyr: Tidy Messy Data},
+  author = {Hadley Wickham and Lionel Henry},
+  year = {2020},
+  note = {R package version 1.1.1},
+  url = {https://CRAN.R-project.org/package=tidyr},
+}
+
+@Manual{R-tidyverse,
+  title = {tidyverse: Easily Install and Load the Tidyverse},
+  author = {Hadley Wickham},
+  year = {2019},
+  note = {R package version 1.3.0},
+  url = {https://CRAN.R-project.org/package=tidyverse},
+}
+
+@Manual{R-xts,
+  title = {xts: eXtensible Time Series},
+  author = {Jeffrey A. Ryan and Joshua M. Ulrich},
+  year = {2020},
+  note = {R package version 0.12.1},
+  url = {https://github.com/joshuaulrich/xts},
+}
+
+@Manual{R-zoo,
+  title = {zoo: S3 Infrastructure for Regular and Irregular Time Series (Z's
+Ordered Observations)},
+  author = {Achim Zeileis and Gabor Grothendieck and Jeffrey A. Ryan},
+  year = {2020},
+  note = {R package version 1.8-8},
+  url = {http://zoo.R-Forge.R-project.org/},
+}
+
 @Book{bookdown2016,
   title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
   author = {Yihui Xie},
@@ -39,6 +136,15 @@
   year = {2016},
   note = {ISBN 978-1138700109},
   url = {https://bookdown.org/yihui/bookdown},
+}
+
+@Book{ggplot22016,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {https://ggplot2.tidyverse.org},
 }
 
 @Book{knitr2015,
@@ -81,5 +187,27 @@
   year = {2020},
   note = {ISBN 9780367563837},
   url = {https://bookdown.org/yihui/rmarkdown-cookbook},
+}
+
+@Article{tidyverse2019,
+  title = {Welcome to the {tidyverse}},
+  author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+  year = {2019},
+  journal = {Journal of Open Source Software},
+  volume = {4},
+  number = {43},
+  pages = {1686},
+  doi = {10.21105/joss.01686},
+}
+
+@Article{zoo2005,
+  title = {zoo: S3 Infrastructure for Regular and Irregular Time Series},
+  author = {Achim Zeileis and Gabor Grothendieck},
+  journal = {Journal of Statistical Software},
+  year = {2005},
+  volume = {14},
+  number = {6},
+  pages = {1--27},
+  doi = {10.18637/jss.v014.i06},
 }
 
