--- a/packages.bib
+++ b/packages.bib
@@ -15,11 +15,19 @@
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 
+@Manual{R-broom,
+  title = {broom: Convert Statistical Objects into Tidy Tibbles},
+  author = {David Robinson and Alex Hayes and Simon Couch},
+  year = {2021},
+  note = {R package version 0.7.6},
+  url = {https://CRAN.R-project.org/package=broom},
+}
+
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
-  year = {2020},
-  note = {R package version 1.0.1},
+  year = {2021},
+  note = {R package version 1.0.7},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
@@ -39,20 +47,20 @@
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
 
+@Manual{R-janitor,
+  title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+  author = {Sam Firke},
+  year = {2020},
+  note = {R package version 2.0.1},
+  url = {https://github.com/sfirke/janitor},
+}
+
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2021},
   note = {R package version 1.31},
   url = {https://yihui.org/knitr/},
-}
-
-@Manual{R-PerformanceAnalytics,
-  title = {PerformanceAnalytics: Econometric Tools for Performance and Risk Analysis},
-  author = {Brian G. Peterson and Peter Carl},
-  year = {2020},
-  note = {R package version 2.0.4},
-  url = {https://github.com/braverock/PerformanceAnalytics},
 }
 
 @Manual{R-purrr,
@@ -95,6 +103,15 @@
   url = {https://CRAN.R-project.org/package=tibble},
 }
 
+@Manual{R-tidycensus,
+  title = {tidycensus: Load US Census Boundary and Attribute Data as tidyverse and
+sf-Ready Data Frames},
+  author = {Kyle Walker and Matt Herman},
+  year = {2021},
+  note = {R package version 1.1},
+  url = {https://walker-data.com/tidycensus/},
+}
+
 @Manual{R-tidyr,
   title = {tidyr: Tidy Messy Data},
   author = {Hadley Wickham and Lionel Henry},
@@ -109,23 +126,6 @@
   year = {2019},
   note = {R package version 1.3.0},
   url = {https://CRAN.R-project.org/package=tidyverse},
-}
-
-@Manual{R-xts,
-  title = {xts: eXtensible Time Series},
-  author = {Jeffrey A. Ryan and Joshua M. Ulrich},
-  year = {2020},
-  note = {R package version 0.12.1},
-  url = {https://github.com/joshuaulrich/xts},
-}
-
-@Manual{R-zoo,
-  title = {zoo: S3 Infrastructure for Regular and Irregular Time Series (Z's
-Ordered Observations)},
-  author = {Achim Zeileis and Gabor Grothendieck and Jeffrey A. Ryan},
-  year = {2020},
-  note = {R package version 1.8-8},
-  url = {http://zoo.R-Forge.R-project.org/},
 }
 
 @Book{bookdown2016,
@@ -198,16 +198,5 @@ Ordered Observations)},
   number = {43},
   pages = {1686},
   doi = {10.21105/joss.01686},
-}
-
-@Article{zoo2005,
-  title = {zoo: S3 Infrastructure for Regular and Irregular Time Series},
-  author = {Achim Zeileis and Gabor Grothendieck},
-  journal = {Journal of Statistical Software},
-  year = {2005},
-  volume = {14},
-  number = {6},
-  pages = {1--27},
-  doi = {10.18637/jss.v014.i06},
 }
 
