--- a/05_01_CorrelationAndRegression.Rmd
+++ b/05_01_CorrelationAndRegression.Rmd
@@ -21,7 +21,7 @@
 
 ## Important Links and Files {-}
 
-* The file we worked on in class is available [here]()
+* The file we worked on in class is available [here](https://github.com/kylescotshank/applied_data_science/blob/master/Week5_Class1_InClassExamples.R)
 
 ## Written Assignment #2 {-}
 
