--- a/packages.bib
+++ b/packages.bib
@@ -3,7 +3,7 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2020},
+  year = {2021},
   url = {https://www.R-project.org/},
 }
 
@@ -15,19 +15,27 @@
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 
+@Manual{R-broom,
+  title = {broom: Convert Statistical Objects into Tidy Tibbles},
+  author = {David Robinson and Alex Hayes and Simon Couch},
+  year = {2021},
+  note = {R package version 0.7.6},
+  url = {https://CRAN.R-project.org/package=broom},
+}
+
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
   year = {2021},
-  note = {R package version 1.0.5},
+  note = {R package version 1.0.7},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
 @Manual{R-forcats,
   title = {forcats: Tools for Working with Categorical Variables (Factors)},
   author = {Hadley Wickham},
-  year = {2021},
-  note = {R package version 0.5.1},
+  year = {2020},
+  note = {R package version 0.5.0},
   url = {https://CRAN.R-project.org/package=forcats},
 }
 
@@ -39,12 +47,28 @@
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
 
+@Manual{R-janitor,
+  title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+  author = {Sam Firke},
+  year = {2020},
+  note = {R package version 2.0.1},
+  url = {https://github.com/sfirke/janitor},
+}
+
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2021},
-  note = {R package version 1.33},
+  note = {R package version 1.31},
   url = {https://yihui.org/knitr/},
+}
+
+@Manual{R-PerformanceAnalytics,
+  title = {PerformanceAnalytics: Econometric Tools for Performance and Risk Analysis},
+  author = {Brian G. Peterson and Peter Carl},
+  year = {2020},
+  note = {R package version 2.0.4},
+  url = {https://github.com/braverock/PerformanceAnalytics},
 }
 
 @Manual{R-purrr,
@@ -57,9 +81,9 @@
 
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
-  author = {Hadley Wickham and Jim Hester},
-  year = {2020},
-  note = {R package version 1.4.0},
+  author = {Hadley Wickham and Jim Hester and Romain Francois},
+  year = {2018},
+  note = {R package version 1.3.1},
   url = {https://CRAN.R-project.org/package=readr},
 }
 
@@ -82,25 +106,50 @@
 @Manual{R-tibble,
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
-  year = {2021},
-  note = {R package version 3.1.1},
+  year = {2020},
+  note = {R package version 3.0.3},
   url = {https://CRAN.R-project.org/package=tibble},
 }
 
 @Manual{R-tidyr,
   title = {tidyr: Tidy Messy Data},
-  author = {Hadley Wickham},
-  year = {2021},
-  note = {R package version 1.1.3},
+  author = {Hadley Wickham and Lionel Henry},
+  year = {2020},
+  note = {R package version 1.1.1},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
 
 @Manual{R-tidyverse,
   title = {tidyverse: Easily Install and Load the Tidyverse},
   author = {Hadley Wickham},
-  year = {2021},
-  note = {R package version 1.3.1},
+  year = {2019},
+  note = {R package version 1.3.0},
   url = {https://CRAN.R-project.org/package=tidyverse},
+}
+
+@Manual{R-titanic,
+  title = {titanic: Titanic Passenger Survival Data Set},
+  author = {Paul Hendricks},
+  year = {2015},
+  note = {R package version 0.1.0},
+  url = {https://github.com/paulhendricks/titanic},
+}
+
+@Manual{R-xts,
+  title = {xts: eXtensible Time Series},
+  author = {Jeffrey A. Ryan and Joshua M. Ulrich},
+  year = {2020},
+  note = {R package version 0.12.1},
+  url = {https://github.com/joshuaulrich/xts},
+}
+
+@Manual{R-zoo,
+  title = {zoo: S3 Infrastructure for Regular and Irregular Time Series (Z's
+Ordered Observations)},
+  author = {Achim Zeileis and Gabor Grothendieck and Jeffrey A. Ryan},
+  year = {2020},
+  note = {R package version 1.8-8},
+  url = {http://zoo.R-Forge.R-project.org/},
 }
 
 @Book{bookdown2016,
@@ -173,5 +222,16 @@
   number = {43},
   pages = {1686},
   doi = {10.21105/joss.01686},
+}
+
+@Article{zoo2005,
+  title = {zoo: S3 Infrastructure for Regular and Irregular Time Series},
+  author = {Achim Zeileis and Gabor Grothendieck},
+  journal = {Journal of Statistical Software},
+  year = {2005},
+  volume = {14},
+  number = {6},
+  pages = {1--27},
+  doi = {10.18637/jss.v014.i06},
 }
 
