--- a/06_01_IntroductoryDataViz.Rmd
+++ b/06_01_IntroductoryDataViz.Rmd
@@ -16,4 +16,4 @@ None!
 
 ## Important Links and Files {-}
 
-* The presentation slides discussed in class are available [here]()
+* The presentation slides discussed in class are available [here](https://docs.google.com/presentation/d/1aKAxmNBBGOmIOY7EgbVHrhqsKdant18MzbIlWqtJmnc/edit#slide=id.gf935e25286_0_593)
