--- a/06_02_IntroductoryDataViz2.Rmd
+++ b/06_02_IntroductoryDataViz2.Rmd
@@ -21,7 +21,7 @@
 
 ## Important Links and Files {-}
 
-* The file we worked on in class is available [here]()
+* The file we worked on in class is available [here](https://github.com/kylescotshank/applied_data_science/blob/master/Week6_Class2_InClassExamples.R)
 
 ## Information about the Final Project {-}
 
