--- a/07_01_StatisticalDataViz.Rmd
+++ b/07_01_StatisticalDataViz.Rmd
@@ -18,7 +18,7 @@ None!
 
 ## Important Links and Files {-}
 
-* The file we worked on in class is available [here]()
+* The file we worked on in class is available [here](https://github.com/kylescotshank/applied_data_science/blob/master/Week7_Class1_InClassExamples.R)
 
 
 ## Written Assignment #3 {-}
